404 page content updated

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,20 @@
 ---
-title: "Page Not Found"
+title: "404 — Research Not Found"
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+It seems you’ve wandered into an **unpublished paper** or a **missing dataset**.  
+The page you’re looking for doesn’t exist — or perhaps it’s still **under peer review**.
+
+---
+
+🔍 **Try one of the following instead:**
+- Return to the [Home Lab](/) — where all verified knowledge resides.  
+- Visit the [Publications](/publications) — discover what’s already been accepted.  
+- Explore [Projects](/projects) — ongoing experiments await your curiosity.  
+
+---
+
+**Tip:** In research (and in web browsing), a “404” isn’t a failure — it’s just a **hypothesis waiting for discovery.**
+
